Fix database schema, Flyway migrations, and resolve frontend login issues